tests/compile_fail/machine_module/inline_module.stderr
error[E0658]: file modules in proc macro input are unstable
 --> tests/compile_fail/machine_module/inline_module.rs:8:5
  |
8 |     mod machine;
  |     ^^^^^^^^^^^^
  |
  = note: see issue #54727 <https://github.com/rust-lang/rust/issues/54727> for more information

error: a `moku::machine_module` must have empty braces, try `mod machine {}`
 --> tests/compile_fail/machine_module/inline_module.rs:7:5
  |
7 |     #[machine_module]
  |     ^
